studies up to 2020-01-25

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,7 @@
 database_connection_credentials.txt
 
 # DataWarehouse config file
-/Exercises Notebooks/03 Data Warehouses/*.cfg
+# /Exercises Notebooks/03 Data Warehouses/*.cfg
+
+# all config files are ignored
+**/*.cfg
