--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ database_connection_credentials.txt
 
 # all config files are ignored
 **/*.cfg
+
+# all "ipynb_checkpoints" are ignored
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
