studies up to 2020-01-25

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,4 @@ database_connection_credentials.txt
 
 # all "ipynb_checkpoints" are ignored
 .ipynb_checkpoints
-*/.ipynb_checkpoints/*
+**/.ipynb_checkpoints/*
